kubernetes/__overlays/production/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployable0504
spec:
  template:
    spec:
      containers:
        - name: deployable0504
          resources:
            requests:
              memory: 128Mi
              cpu: 0.5
            limits:
              memory: 512Mi
              cpu: 1.0
